# Demo-main

./: README.md  pyproject.toml  resumeagent.pem
db/: chroma.sqlite3
src/resume_rewriting_agents_using_job_description_integration/: app.py  crew.py  main.py  requirements.txt  updApp.py  vercel.json
src/resume_rewriting_agents_using_job_description_integration/config/: agents.yaml  tasks.yaml
src/resume_rewriting_agents_using_job_description_integration/templates/: agents.html  developer-docs.html  how-it-works.html  index.html  use-cases.html
