[project]
name = "resume_rewriting_agents_using_job_description_integration"
version = "0.1.0"
description = "resume_rewriting_agents_using_job_description_integration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
resume_rewriting_agents_using_job_description_integration = "resume_rewriting_agents_using_job_description_integration.main:run"
run_crew = "resume_rewriting_agents_using_job_description_integration.main:run"
train = "resume_rewriting_agents_using_job_description_integration.main:train"
replay = "resume_rewriting_agents_using_job_description_integration.main:replay"
test = "resume_rewriting_agents_using_job_description_integration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
